vlib/v/checker/tests/for_in_with_reserved_type_names.vv
fn main() {
	for rune in 'runes' {
		println(rune)
	}

	for char, c in 'runes' {
		println(c)
		println(char)
	}
}
